# ai-data-agents

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  Manual_Relatorio_Tecnico_Projeto_Data_Agents.md  NOTICE  PRODUCT.md  README.md  SECURITY.md  chainlit.md  databricks.yml  index.html  main.py  mkdocs.yml  pyproject.toml  sitemap.xml  start.sh
.claude/: CLAUDE.md
.claude-plugin/: marketplace.json
.claude/commands/: add-agent.md  add-mcp.md  analyze-project.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  question.yml
.github/workflows/: cd.yml  ci.yml  codeql.yml  docs.yml  install-matrix.yml  plugin-validate.yml  refresh-skills.yml  release.yml  security.yml  test-e2e.yml
.streamlit/: config.toml
agents/: cache_prefix.md  delegation_map.yaml  dispatcher.py  loader.py  mlflow_wrapper.py  supervisor.py
agents/prompts/: supervisor_prompt.py
agents/registry/: _template.md  azure-cost-calculator.md  business-analyst.md  data-contracts-engineer.md  data-mesh-architect.md  data-quality-steward.md  databricks-ai.md  databricks-engineer.md  dbt-expert.md  fabric-engineer.md  fabric-ontology.md  fabric-rti.md  geral.md  governance-auditor.md  migration-expert.md  python-expert.md
commands/: analyze.py  geral.py  health.py  mcp.py  parser.py  party.py  workflow.py
compression/: constants.py
concepts/: index.html
concepts/architecture/: index.html
concepts/constitution/: index.html
concepts/hooks/: index.html
concepts/memory/: index.html
concepts/tier-system/: index.html
config/: __init__.py  agent_meta.py  commands.yaml  exceptions.py  logging_config.py  mcp_servers.py  settings.py
data/databricks_pricing/: SCHEMA.md  aws.yaml  azure.yaml  gcp.yaml
data_agents/: __init__.py  cli.py
data_agents/agents/: cache_prefix.md  dispatcher.py  loader.py  mlflow_wrapper.py  supervisor.py
data_agents/commands/: eval.py  geral.py  health.py  mcp.py  parser.py  party.py  sessions.py  workflow.py
data_agents/compression/: __init__.py  constants.py  hook.py  metrics.py  strategies.py
data_agents/config/: __init__.py  agent_meta.py  commands.yaml  exceptions.py  logging_config.py  mcp_servers.py  settings.py  snapshot.py
data_agents/cost_app/: __init__.py
data_agents/cost_engine/: __init__.py  billing.py  databricks.py  databricks_ai_ml.py  optimization.py
data_agents/evals/: __init__.py  canonical_queries.yaml  runner.py
data_agents/hooks/: audit_hook.py  checkpoint.py  context_budget_hook.py  memory_hook.py  output_compressor_hook.py  session_lifecycle.py  session_logger.py  transcript_hook.py  workflow_tracker.py
data_agents/memory/: __init__.py  compiler.py  decay.py  embedder.py  extractor.py  lint.py  long_term.py  manager.py  retrieval.py  short_term.py  store.py  telemetry.py  types.py
data_agents/monitoring/: __init__.py  app.py
data_agents/ui/: chainlit_app.py  exporter.py  ui_config.py
data_agents/utils/: frontmatter.py  pricing.py  summarizer.py
data_agents/visualization/: __init__.py  emit.py  server.py  watcher.py  ws_broker.py
data_agents/workflow/: __init__.py  dag.py  executor.py  tracker.py
docs/: ARCHITECTURE.md  GAPS_E_MELHORIAS.md  SECURITY_THREAT_MODEL.md
docs/adr/: ADR-001-moonshot-kimi-as-primary-model.md  ADR-002-memory-three-layers.md  ADR-003-two-stage-routing.md  ADR-004-tier-system.md  ADR-005-constitution-rules.md  ADR-006-hooks-vs-middleware.md  ADR-007-kb-as-markdown.md  ADR-008-cross-platform-databricks-fabric.md  ADR-009-structural-lints.md  ADR-010-docs-site-mkdocs-material.md  ADR-011-claude-code-plugin-scope.md  README.md  _template.md
docs/legacy/: Manual_Relatorio_Tecnico_Projeto_Data_Agents.md
docs/refactor-v3/: PLAN.md  inventory.md  test-classification.md
docs/site/: index.md
evals/: canonical_queries.yaml  runner.py
getting-started/: index.html
getting-started/first-query/: index.html
getting-started/installation/: index.html
getting-started/slash-commands/: index.html
hooks/: audit_hook.py  context_budget_hook.py  memory_hook.py  session_lifecycle.py  session_logger.py  workflow_tracker.py
javascripts/: landing.js
kb/: README.md  collaboration-workflows.md  constitution.md  task_routing.md
kb/azure-pricing/: index.md
kb/checklists/: index.md  migration-dod.md  pipeline-dod.md  semantic-dod.md
kb/data-contracts/: index.md
kb/data-mesh/: index.md
kb/data-quality/: index.md
kb/databricks/: index.md
kb/databricks-pricing/: extracted-prices-raw.md  implementation-strategy.md  index.md  parity-audit.md
kb/fabric/: index.md
kb/governance/: index.md
memory/: __init__.py  compiler.py  decay.py  embedder.py  extractor.py  ledger.py  long_term.py  manager.py  retrieval.py  short_term.py  store.py  telemetry.py
migration/: index.html
monitoring/: README.md  app.py
reference/: index.html
scripts/: analyze_tool_coverage.py  bootstrap.py  build_plugin.sh  bump-version.sh  cleanup_fabric_test_notebooks.py  demo.py  gen_inventory.py  lint_commands.py  lint_kb.py  lint_mcp_configs.py  lint_registry.py  lint_skills.py  refresh_skills.py  security_review.sh  smoke_lesson_learned.py  test_onelake_upload.py
search/: search_index.json
stylesheets/: landing.css
templates/: README.md  cross-platform-spec.md  pipeline-spec.md  star-schema-spec.md
tests/: conftest.py  test_agent_preload.py  test_agents.py  test_azure_pricing_server.py  test_bootstrap.py  test_commands.py  test_config_snapshot.py  test_context_budget_hook.py  test_dispatcher.py  test_fabric_ontology_server.py  test_functional.py  test_geral_command.py  test_ledger.py  test_long_term.py  test_memory_extractor.py  test_settings.py  test_summarizer.py  test_supervisor.py  test_workflow.py
tutorials/: index.html
ui/: chainlit_app.py  exporter.py  ui_config.py
utils/: pricing.py  summarizer.py
visualization/: __init__.py  emit.py  event_translator.py  server.py  watcher.py  ws_broker.py
wiki/: index.md
workflow/: dag.py  tracker.py
(+304 files in other folders)
