[project]
name = "ai-data-agents"
# Phase 9: VERSION na raiz é a single source of truth.
# scripts/bump-version.sh sincroniza este campo + data_agents/__init__.py +
# README badge ao bumpar. Não editar manualmente — usa o script.
version = "3.0.1"
description = "Sistema Multi-Agentes para Engenharia, Qualidade, Governança e Análise de Dados — Databricks + Microsoft Fabric"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Core — Claude Agent SDK
    "claude-agent-sdk>=0.1.48",

    # Anthropic SDK direto — usado por utils/summarizer.py (Kimi K2.6 via endpoint
    # compatível Anthropic Messages API) e scripts/refresh_skills.py (web_search
    # nativo). Não é dependência transitiva garantida do claude-agent-sdk.
    "anthropic>=0.39.0",

    # MCP framework — declarado explicitamente para garantir versão mínima compatível
    # com fabric_ontology e demais MCPs customizados (FastMCP requer >=1.27.0).
    "mcp[cli]>=1.27.0",

    # MCP Servers
    "databricks-mcp-server>=0.4.4",
    "microsoft-fabric-rti-mcp>=0.1.0",

    # Databricks Enterprise & MLOps
    "databricks-sdk>=0.20.0",
    "mlflow>=2.11.0",

    # Microsoft Fabric & Identity
    "azure-identity>=1.15.0",
    "semantic-link>=0.1.0",

    # Azure OpenAI — usado pra gerar embeddings na Fase B (RAG/Vector Store)
    # da PoC Itaúsa via text-embedding-3-large. Compatível com SDK openai 1.x+.
    # Configuração via .env: AZURE_OPENAI_ENDPOINT, AZURE_OPENAI_API_KEY,
    # AZURE_OPENAI_EMBEDDING_DEPLOYMENT, AZURE_OPENAI_API_VERSION.
    "openai>=1.30.0",

    # Fabric SQL Analytics Endpoint — MCP customizado (fabric_sql)
    # Conecta via TDS ao SQL Endpoint, resolvendo limitação do schema dbo da REST API.
    # Requer ODBC Driver 18 no sistema:
    #   macOS: brew install msodbcsql18
    #   Linux: https://learn.microsoft.com/sql/connect/odbc/linux-mac/installing-the-microsoft-odbc-driver-for-sql-server
    "pyodbc>=5.0",

    # Migration Source — MCP customizado (migration_source)
    # Conecta a bancos de origem (SQL Server e PostgreSQL) para extração de DDL e metadados.
    # pyodbc já incluso acima (SQL Server). psycopg2-binary para PostgreSQL.
    "psycopg2-binary>=2.9",

    # Configuração
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",

    # Output formatado
    "rich>=13.0",

    # Input interativo no CLI: setas, histórico persistente, Ctrl+A/E, backspace
    # Substitui console.input() do Rich que não suporta readline
    "prompt_toolkit>=3.0",

    "pyyaml>=6.0",

    # Azure Pricing MCP — usa requests pra Retail Prices API (https://prices.azure.com)
    # API pública sem auth; sem dependência de credenciais.
    "requests>=2.31",

]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-testmon>=2.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "bandit>=1.7",
    "types-PyYAML>=6.0",
]
memory = [
    # Embeddings semânticos locais (ONNX runtime, sem PyTorch, sem API externa).
    # Modelo padrão: BAAI/bge-small-en-v1.5 (~25MB, 384 dims).
    # Habilita busca vetorial no ShortTermMemory (complementa FTS5/BM25).
    # Instalar: pip install -e ".[memory]"
    "fastembed>=0.3",
]
ontology = [
    # Web semântica — ontology-engineer agent
    # rdflib: parse/serialização de RDF, OWL, Turtle, N-Triples, JSON-LD + SPARQL in-memory
    # owlready2: manipulação OWL com reasoning (requer Java >= 11 para reasoning)
    # Instalar: pip install -e ".[ontology]"
    "rdflib>=7.0",
    "owlready2>=0.47",
]
monitoring = [
    "streamlit>=1.35",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "streamlit-agraph>=0.0.45",
]
ui = [
    "chainlit>=2.0",
    "pandas>=2.0",
    "pyyaml>=6.0",
    # Phase 8: markdown2 era core, mas o único consumidor é o exporter
    # HTML do UI (ui/exporter.py). Movido para cá; sem [ui] o exporter
    # levanta ImportError com mensagem clara.
    "markdown2>=2.4",
]
viz = [
    # Visualização 3D do escritório dos agentes em tempo real.
    # fastapi + uvicorn: server HTTP/WebSocket que serve a cena Three.js
    # watchdog: tail dos JSONL (audit, workflows) e push pro WebSocket
    # Instalar: pip install -e ".[viz]"
    # Rodar: python -m visualization.server  (porta 8512 por default)
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "watchdog>=4.0",
]
docs = [
    # Phase 11: docs site (ADR-010). Só o mantenedor precisa instalar.
    # End users consomem o site público em https://thomazrossito.github.io/ai-data-agents/
    # Rodar: make docs-serve (preview) ou make docs-build (estático)
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10.7",
]

[project.scripts]
# Phase 7: entry points apontam para o namespace data_agents.*
ai-data-agents = "data_agents.cli:main"
fabric-sql-mcp = "data_agents.mcp_servers.fabric_sql.server:main"
fabric-semantic-mcp = "data_agents.mcp_servers.fabric_semantic.server:main"
fabric-ontology-mcp = "data_agents.mcp_servers.fabric_ontology.server:main"
databricks-genie-mcp = "data_agents.mcp_servers.databricks_genie.server:main"
migration-source-mcp = "data_agents.mcp_servers.migration_source.server:main"
azure-pricing-mcp = "data_agents.mcp_servers.azure_pricing.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Phase 7: empacotar somente o namespace data_agents/
packages = ["data_agents"]

[tool.hatch.build.targets.sdist]
# Phase 7: incluir o namespace + dados externos (skills, kb, tools, tests)
include = [
    "/data_agents",
    "/skills",
    "/kb",
    "/tools",
    "/tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"
cache-dir = ".cache/ruff"
extend-exclude = [
    "skills/",   # Reference/example files from external sources — not project code
    "inputs/",   # External repos vendored for integration — not project code
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
cache_dir = ".cache/pytest"
markers = [
    # Categorias canônicas — auto-aplicadas pelo conftest.py de cada subdir.
    # Não decore manualmente; mova o arquivo para tests/<categoria>/ que o marker é injetado.
    "unit: testes isolados e rápidos (< 1s). Sem rede, sem MCP real, sem LLM real. Tudo mockado.",
    "integration: tocam DB local (SQLite), JSONL persistente ou subprocess. Offline, ~1-10s.",
    "e2e: chamam LLM real, Databricks, Fabric ou subprocess full-stack. Exigem credenciais.",

    # Categorias transversais — aplicar manualmente quando relevante.
    "requires_network: HTTP/socket reais. Implícito em e2e; explícito em integration quando aplicável.",
    "slow: runtime > 5s. Skip em iteração rápida com `pytest -m 'not slow'`.",
    # Phase 10: perf benchmarks — só rodam com `-m perf` ou `make test-perf`.
    # Skipped por default (flakeiam em runners CI compartilhados).
    "perf: performance baselines com gate de regressão (20% acima do baseline = fail).",
]

[tool.coverage.run]
data_file = "logs/.coverage"

[tool.mypy]
python_version = "3.11"
cache_dir = ".cache/mypy"
strict_optional = true
warn_unused_ignores = true
warn_return_any = false

[[tool.mypy.overrides]]
module = [
    "mlflow.*",
    "claude_agent_sdk.*",
    "rich.*",
    "databricks.*",
    "azure.*",
    "pydantic_settings.*",
    "semantic_link.*",
    "rdflib.*",
    "owlready2.*",
]
ignore_missing_imports = true
